tags/3.5/bezantrakta/event/admin/event_venue.rst
.. _event_venue:

###############################
Залы (места проведения событий)
###############################

************
Список залов
************

Фильтры
=======

* текстовый поиск по названию зала

Действия с выбранными залами
============================

* удалить

Столбцы в таблице залов
=======================

* **Название**

* **Псевдоним**

  Псевдоним заполняется в латиннице и может быть каким угодно, но **обязательно уникальным**.

  Псевдоним зала используется при *фильтрации событий на сайте по залу*. Для этого нужно создать :ref:`пункт меню <menu_item>` со ссылкой вида ``/afisha/venue/ПСЕВДОНИМ_ЗАЛА``, который будет вести на страницу, выводящую все актуальные события в этом зале на данный момент (например, ``/afisha/venue/chambervrn/``).

* Количество **схем залов**, импортированных из СПБ и привязанных к залу.

* **Город**, к которому привязан зал.

*****************************
Страница редактирования залов
*****************************

* **Название**

* **Псевдоним**

* **Город**, к которому привязан зал.

Схемы залов
===========
В таблице выводятся все имеющиеся :ref:`схемы залов <ticket_service_scheme>`, импортированные из конкретного СПБ с их атрибутами:

* **Название схемы зала**

* **ID схемы зала**

* **Зал**, к которому привязана схема зала.

.. only:: dev

  ******
  Модели
  ******
  .. autoclass:: bezantrakta.event.models.EventVenue

  *************
  Представления
  *************

  Фильтрация событий по залу
  ==========================
  .. automodule:: bezantrakta.event.views.filter_venue
