tags/3.8/bezantrakta/event/admin/event_venue.rst
###############################
Залы (места проведения событий)
###############################

************
Список залов
************

Фильтры
=======

* текстовый поиск по названию зала

Действия
========

* добавить новый зал

Действия с выделенными объектами
================================

* удалить

Столбцы в таблице залов
=======================

* **Название**
* **Псевдоним**
* Количество **схем залов**, импортированных из СПБ и привязанных к залу.
* **Город**, к которому привязан зал.

*****************************
Страница редактирования залов
*****************************

* **Название**

  Название рекомендуется указывать полностью, без сокращений, например, ``Дворец культуры`` вместо ``ДК``.

* **Псевдоним**

  Псевдоним заполняется в латиннице и может быть каким угодно, но **обязательно уникальным**.

  Псевдоним в противоположность названию следует делать кратким и удобным для запоминания. Если у конкретного зала есть сайт, можно использовать его адрес для псевдонима, например, ``chambervrn`` для воронежского Камерного театра. Если в названии есть аббревиатуры/сокращения, в псевдониме их следует сокращать, например, ``dk`` вместо ``dvorec-kultury``.

  Псевдоним зала используется при *фильтрации событий на сайте по залу*. Для этого нужно создать :doc:`пункт меню <../../menu/admin/menu>` со ссылкой вида ``/afisha/venue/ПСЕВДОНИМ_ЗАЛА``, который будет вести на страницу, выводящую все актуальные события в этом зале на данный момент, например, ``/afisha/venue/chambervrn/``.

* **Город**, к которому привязан зал.

Схемы залов
===========
В таблице выводятся все имеющиеся :doc:`схемы залов <../../../third_party/ticket_service/admin/ticket_service_scheme_venue_binder>`, импортированные из конкретного СПБ с их атрибутами:

* **Название схемы зала**

* **ID схемы зала**

* **Зал**, к которому привязана схема зала.
